removed commander
